crates/resources/src/snapshots/resources__runtime__tests__caddy_adapter_requires_caddy_binary.snap
---
source: crates/resources/src/runtime.rs
expression: "(missing, present)"
---
(
    Err(
        InvalidArtifactLayout {
            resource: "caddy",
            reason: "missing executable `bin/caddy`",
        },
    ),
    Ok(
        (),
    ),
)
