crates/resources/src/snapshots/resources__runtime__tests__redis_adapter_requires_redis_server_binary.snap
---
source: crates/resources/src/runtime.rs
expression: "(missing, present)"
---
(
    Err(
        InvalidArtifactLayout {
            resource: "redis",
            reason: "missing executable `bin/redis-server`",
        },
    ),
    Ok(
        (),
    ),
)
