crates/resources/src/snapshots/resources__runtime__tests__rustfs_adapter_requires_rustfs_binary.snap
---
source: crates/resources/src/runtime.rs
expression: "(missing, present)"
---
(
    Err(
        InvalidArtifactLayout {
            resource: "rustfs",
            reason: "missing executable `bin/rustfs`",
        },
    ),
    Ok(
        (),
    ),
)
